tests/__snapshots__/directive-fixme-stderr.snap.txt
Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  1 | import { expect, test } from "tstyche";
  2 | 
  3 | // @tstyche fixme -- Consider removing the directive
    | ~~~~~~~~~~~~~~~~~
  4 | expect<string>().type.toBe<string>();
  5 | 
  6 | // @tstyche fixme -- Known bug, see: #345

      at ./__typetests__/directive-fixme.tst.ts:3:1

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  15 | // @tstyche fixme
  16 | test("is fixme?", () => {
  17 |   // @tstyche fixme -- Consider removing the directive
     |   ~~~~~~~~~~~~~~~~~
  18 |   expect<number>().type.toBe<number>();
  19 | 
  20 |   expect<never>().type.toBe<number>(); // silenced fail

       at ./__typetests__/directive-fixme.tst.ts:17:3

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  24 | // @tstyche fixme -- Consider removing the directive
  25 | test("is number?", () => {
  26 |   // @tstyche fixme -- Consider removing the directive
     |   ~~~~~~~~~~~~~~~~~
  27 |   expect<number>().type.toBe<number>();
  28 | 
  29 |   // @tstyche fixme

       at ./__typetests__/directive-fixme.tst.ts:26:3

Error: The 'test()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  22 | });
  23 | 
  24 | // @tstyche fixme -- Consider removing the directive
     | ~~~~~~~~~~~~~~~~~
  25 | test("is number?", () => {
  26 |   // @tstyche fixme -- Consider removing the directive
  27 |   expect<number>().type.toBe<number>();

       at ./__typetests__/directive-fixme.tst.ts:24:1

